--- a/src/styles/media_queries/media_queries.scss
+++ b/src/styles/media_queries/media_queries.scss
@@ -6,7 +6,7 @@
   #contact {
     margin: 50px 60px;
   }
-  
+
   // nav responsive
   .navList * {
     display: none;
@@ -27,7 +27,7 @@
       background-color: white;
       padding: 15px;
       border-radius: 8px;
-      transition: all .2s;
+      transition: all 0.2s;
 
       a {
         text-decoration: none;
@@ -35,7 +35,6 @@
         margin-bottom: 8px;
         font-weight: 500;
       }
-      
     }
   }
 
@@ -51,34 +50,73 @@
       }
     }
   }
+
+  
+  h1.bye {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
+  .navBar {
+    height: 100px;
+    padding: 0 20px;
+  }
+
   #intro {
     height: 80vh;
+    margin: 0 30px 30px 30px;
   }
 
   #about {
+    margin: 0 30px 30px 30px;
+
+    p.who {
+      margin: 0;
+    }
+
     .main {
+      gap: 25px;
+
       img {
-        width: 200px;
-        height: 200px;
+        margin-top: 20px;
+        width: 150px;
+        height: 150px;
       }
+    }
+  }
+
+  #skills {
+    margin: 0 30px 50px 30px;
+
+    p.why {
+      margin-bottom: 8px;
+    }
+  }
+
+  #work {
+    margin: 0 30px 50px 30px;
+
+    p {
+      margin-bottom: 8px;
     }
   }
 
   #contact {
     flex-direction: column;
-    gap: 30px;
     padding: 0;
     height: 100vh;
+    margin: 60px 30px;
 
     .text {
       padding: 0;
+      text-align: center;
     }
 
     .btnp {
-        padding: 14px;
+      padding: 14px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
