--- a/src/styles/main/styles.css
+++ b/src/styles/main/styles.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   justify-content: space-around;
   font-size: 24px;
+  width: 100vw;
   height: 120px;
   position: sticky;
   top: 0;
