--- a/src/styles/media_queries/media_queries.css
+++ b/src/styles/media_queries/media_queries.css
@@ -41,25 +41,58 @@
     width: 275px;
     height: 275px;
   }
+  h1.bye {
+    display: none;
+  }
 }
 @media (max-width: 600px) {
+  .navBar {
+    height: 100px;
+    padding: 0 20px;
+  }
   #intro {
     height: 80vh;
+    margin: 0 30px 30px 30px;
+  }
+  #about {
+    margin: 0 30px 30px 30px;
+  }
+  #about p.who {
+    margin: 0;
+  }
+  #about .main {
+    gap: 25px;
   }
   #about .main img {
-    width: 200px;
-    height: 200px;
+    margin-top: 20px;
+    width: 150px;
+    height: 150px;
+  }
+  #skills {
+    margin: 0 30px 50px 30px;
+  }
+  #skills p.why {
+    margin-bottom: 8px;
+  }
+  #work {
+    margin: 0 30px 50px 30px;
+  }
+  #work p {
+    margin-bottom: 8px;
   }
   #contact {
     flex-direction: column;
-    gap: 30px;
     padding: 0;
     height: 100vh;
+    margin: 60px 30px;
   }
   #contact .text {
     padding: 0;
+    text-align: center;
   }
   #contact .btnp {
     padding: 14px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }/*# sourceMappingURL=media_queries.css.map */
