--- a/src/styles/main/styles.css
+++ b/src/styles/main/styles.css
@@ -49,6 +49,9 @@ body {
 .dropDown {
   display: none;
 }
+.dropDown .list {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
 
 #intro {
   display: flex;
