--- a/src/styles/main/styles.scss
+++ b/src/styles/main/styles.scss
@@ -64,6 +64,11 @@ body {
 
 .dropDown {
   display: none;
+
+  .list {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+      rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
 }
 
 // intro
