--- a/src/styles/main/styles.css
+++ b/src/styles/main/styles.css
@@ -17,9 +17,10 @@ body {
   justify-content: space-around;
   font-size: 24px;
   width: 100vw;
-  height: 120px;
+  height: 75px;
   position: sticky;
   top: 0;
+  transition: background-color 0.2s ease-in-out;
 }
 .navBar .logo {
   font-size: 32px;
@@ -36,6 +37,7 @@ body {
   list-style-type: none;
   display: flex;
   gap: 40px;
+  margin: 0;
 }
 .navBar ul a {
   text-decoration: none;
@@ -46,11 +48,23 @@ body {
   color: #353535;
 }
 
+.navBar.scroll {
+  background-color: #fff;
+}
+.navBar.scroll a {
+  color: black;
+}
+
 .dropDown {
   display: none;
 }
 .dropDown .list {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.dropDown .list.open {
+  opacity: 1;
 }
 
 #intro {
