--- a/src/styles/media_queries/media_queries.css
+++ b/src/styles/media_queries/media_queries.css
@@ -14,6 +14,9 @@
     cursor: pointer;
     position: relative;
   }
+  .dropDown .burgerB {
+    color: black;
+  }
   .dropDown .list {
     position: absolute;
     transform: translateX(-75%);
@@ -47,12 +50,11 @@
 }
 @media (max-width: 600px) {
   .navBar {
-    height: 100px;
-    padding: 0 20px;
+    height: 60px;
   }
   #intro {
     height: 80vh;
-    margin: 0 30px 30px 30px;
+    margin: 0 30px 80px 30px;
   }
   #about {
     margin: 0 30px 30px 30px;
@@ -67,6 +69,7 @@
     margin-top: 20px;
     width: 150px;
     height: 150px;
+    border-radius: 50%;
   }
   #skills {
     margin: 0 30px 50px 30px;
