--- a/src/styles/media_queries/media_queries.scss
+++ b/src/styles/media_queries/media_queries.scss
@@ -17,6 +17,10 @@
     cursor: pointer;
     position: relative;
 
+    .burgerB {
+      color: black;
+    }
+
     .list {
       position: absolute;
       transform: translateX(-75%);
@@ -59,13 +63,12 @@
 
 @media (max-width: 600px) {
   .navBar {
-    height: 100px;
-    padding: 0 20px;
+    height: 60px;
   }
 
   #intro {
     height: 80vh;
-    margin: 0 30px 30px 30px;
+    margin: 0 30px 80px 30px;
   }
 
   #about {
@@ -82,6 +85,7 @@
         margin-top: 20px;
         width: 150px;
         height: 150px;
+        border-radius: 50%;
       }
     }
   }
